# vodnik

./: README.md  development_todo.md  launchplan.md
backend/: pyproject.toml  test_api.ipynb
backend/app/: config.py  main.py
backend/app/api/: generate.py  settings.py
backend/app/core/: exceptions.py  rate_limit.py
backend/app/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py  xai.py
backend/app/schema/: generation.py
backend/app/text_generation/: generator.py  generator_between.py  generator_image_prompt.py  generator_modify.py  generator_next.py  generator_start.py  generator_start_lore.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  buttons.css  index.css
frontend/src/components/editor/: CodeMirrorEditor.tsx  Editor.tsx  GenerateButtons.tsx  MediaTagPopup.tsx  TextAreaEditor.tsx
frontend/src/components/modals/: ImagePromptModal.tsx  LoreManager.tsx  MediaManager.tsx  NewStoryModal.tsx  ReadmeModal.tsx  Settings.tsx
frontend/src/components/modes/: Presentation.tsx
frontend/src/components/panels/: LeftPanel.tsx  RightPanel.tsx  ToneSelector.tsx
frontend/src/config/: tonePrompts.json
frontend/src/extensions/: MediaTagExtension.ts
frontend/src/hooks/: useDirtyUnloadGuard.ts  useGeneration.ts  useGoogleDrive.ts
frontend/src/services/: generationApi.ts  googleDrive.ts
frontend/src/types/: generation.ts  google.d.ts
frontend/src/utils/: loadStory.ts  media.ts  saveStory.ts
